Fri Feb 24 2013
1. Bug fixes 
   * NA's are created when converting too large integers during data
     preprocessing
   * plot when there is an array parameter of length 1
2. New features 
   * expose a model's log_prob and grad_log_prob function 
     and add functions for transforming parameters between
     constrained space and unconstrained space
   * add a function monitor to summarize any mcmc samples given 
     as a 3-d array (# iter * # chains * # parameters)

Mon Dec  3 2012
1. New features
   * add get_posterior_mean for stanfit to obtain the posterior
     mean for all parameters
   * add optimizing for stanmodel to get MAP point estimate
2. Changes
   * include library Eigen (remove dependency on RcppEigen)

Sat Nov 24 2012
1. New features 
   * add read_stan_csv to create stanfit objects from sample CSV files 
   * introduce an as.data.frame S3 method for stanfit objects

Sun Nov  4 2012
1. Bug fixes 
   * lp__ is not included when specifying pars (issue 79) 
      https://code.google.com/p/stan/issues/detail?id=79
2. Changes 
   * change default value of arugment `permuted` from FALSE to TRUE for extract
     method of S4 class stanfit

Wed Oct 24 2012
1. New features 
   * return empty stanfit object upon error such as incorrect data
     input, wrong argument specification, etc. Previously, it will 
     stop. The empty stanfit includes the compiled model, so it can
     be reused.
   * add function stan_demo() to run examples included in Stan. 
   * add function sflist2stanfit() to merge a list of stanfit objects into one,
     to facilitate some kind of user-level parallelism. 
   * add S3 method as.matrix, as.array, is.array, dim, dimnames for stanfit objects. 
   * specify seed using string of digits in addition to numbers  
    
2. Bug fixes 
   * bug of setting parameter epsilon_pm wrongly for NUTS 

Tue Sep 25 2012
1. Changes 
   * print progress of sampling with carriage return 

2. New features 