@@ -1,0 +1,3 @@
+2. examples using Ben's idea 
+3. short print 
+4. checklist for installing rstan on windows
